--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,32 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.3.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.8",
-    "@types/react": "^16.14.2",
-    "@types/react-calendar": "^3.1.2",
-    "@types/react-dom": "^16.9.10",
-    "axios": "^0.21.0",
-    "date-fns": "^2.16.1",
-    "formik": "^2.2.6",
-    "mobx": "^6.0.4",
-    "mobx-react-lite": "^3.1.6",
-    "react": "^17.0.1",
-    "react-calendar": "^3.2.1",
-    "react-datepicker": "^3.3.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-toastify": "^6.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1",
-    "typescript": "^4.1.2",
-    "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "@types/jest": "24.0.15",
+    "@types/node": "12.6.8",
+    "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-widgets": "^4.3.3",
+    "@types/revalidate": "^1.1.2",
+    "@types/uuid": "^3.4.5",
+    "axios": "^0.19.0",
+    "date-fns": "^2.0.0-alpha.13",
+    "final-form": "^4.18.2",
+    "mobx": "^5.13.0",
+    "mobx-react-lite": "^1.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.2",
+    "react-widgets": "^4.4.11",
+    "react-widgets-date-fns": "^4.0.26",
+    "revalidate": "^1.2.0",
+    "semantic-ui-react": "^0.87.3",
+    "typescript": "3.5.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,10 +36,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -53,11 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-datepicker": "^3.1.2",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.0",
-    "@types/yup": "^0.29.11"
   }
 }
